@@ -59,6 +59,7 @@
 - fix an RPC fd leak.
 - don't block signals we expect to dump core.
 - fix pthread push order in expire_proc_direct().
+- fix libxml2 non-thread-safe calls.
 
 4/11/2008 autofs-5.0.4
 -----------------------
